syntax = "proto3";
package protocol;
option go_package = "github.com/lucyquest/petinfoservice/petinfoproto";

import "google/protobuf/timestamp.proto";

message Pet {
  string ID = 1;
  string Name = 2;
  google.protobuf.Timestamp DateOfBirth = 3;
}

message PetGetRequest {
  string ID = 1;
}

message PetGetResponse {
  Pet Pet = 1;
}

message PetGetMultipleRequest {
  repeated string IDs = 1;
}

message PetGetMultipleResponse {
  repeated Pet Pets = 1;
}

message PetEditNameRequest {
  string ID = 1;
  string Name = 2;
}

message PetEditNameResponse {}

message PetEditDateOfBirthRequest {
  string ID = 1;
  google.protobuf.Timestamp DateOfBirth = 2;
}

message PetEditDateOfBirthResponse {}

message PetAddRequest {
  string IdempotencyKey = 1;
  Pet Pet = 2; 
}

message PetAddResponse {
  string ID = 1;
}

service PetInfoService {
  rpc Get(PetGetRequest) returns (PetGetResponse);
  rpc GetMultiple(PetGetMultipleRequest) returns (PetGetMultipleResponse);
  rpc EditName(PetEditNameRequest) returns (PetEditNameResponse);
  rpc EditAge(PetEditDateOfBirthRequest) returns (PetEditDateOfBirthResponse);
  rpc Add(PetAddRequest) returns (PetAddResponse);
}
